# text_mapping

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README
apps/camera_apps/: CMakeLists.txt
apps/camera_apps/src/: blob_detector.cpp  blob_detector.h  camera_calibration.cpp  chessboard_generator.cpp  circlesgrid.cpp  circlesgrid.hpp  stereo_calibration.cpp
apps/manual_map_builder/: CMakeLists.txt
apps/manual_map_builder/gui/: mmb_main_window.ui
apps/manual_map_builder/src/: manual_map_builder.cpp  mmb_main_window.cpp  mmb_main_window.h
apps/text_mapper/: CMakeLists.txt
apps/text_mapper/gui/: frame_dialog.ui  image_view_dialog.ui  model_view_dialog.ui  tm_main_window.ui
apps/text_mapper/src/: camera.cpp  camera.h  frame_data.cpp  frame_data.h  frame_dialog.cpp  frame_dialog.h  image_view_dialog.cpp  image_view_dialog.h  key_point.cpp  key_point.h  text_detection.cpp  text_detection.h  text_mapper.cpp  tm_main_window.cpp  tm_main_window.h
apps/text_mapper/src/dialogs/: model_view_dialog.cpp  model_view_dialog.h
apps/text_mapper/src/vtk/: vtk_key_point_instances_source.cpp  vtk_key_point_instances_source.h
apps/windows_kinect_grabber/: CMakeLists.txt
apps/windows_kinect_grabber/gui/: wkg_main_window.ui
apps/windows_kinect_grabber/src/: windows_kinect_grabber.cpp  wkg_main_window.cpp  wkg_main_window.h
data/: .gitignore
data/calibration_images/: FileAddress.txt  KinectRGB_to_HighResRGB_calib.yml  StereoFileAddress.txt  calibrationFileAddress.txt  chessboard_config.yml  stereo_calibration.yml
data/calibration_images/Canon_Zoom2/: canon_zoom2_cameraMatrix.yml
data/calibration_images/Canon_Zoom4/: CanonZoom4.txt  CanonZoom4_Chess.txt  CanonZoom4_FixedFocus.txt  CanonZoom4_cameraMatrix.yml  canon_zoom4_cameraMatrix.yml  canon_zoom4_cameraMatrix_1.yml  canon_zoom4_cameraMatrix_2.yml
data/calibration_images/Kinect/: KinectRGB.txt  KinectRGB_cameraMatrix.yml  Kinect_cameraMatrix.yml
data/calibration_images/Kinect_Canon_Stereo/: KinectDepth_to_BertCanonZoom4_calib.yml  KinectDepth_to_CanonZoom4_calib.yml  KinectRGB_to_CanonZoom4_calib.yml  stereo_bert_config_depth.txt  stereo_config.txt  stereo_config_chess.txt  stereo_config_depth.txt
data/calibration_images/Simulated/: HighResRGB.txt  HighResRGB_cameraMatrix.yml  KinectRGB.txt  KinectRGB_cameraMatrix.yml  KinectRGB_to_HighResRGB_calib.yml  colour_stereo_calib.yaml  high_res_calib.yaml  kinect_calib.yaml
data/calibration_images/Simulated/ColourStereo/: colour_stereo_config.txt
data/contact_lenses/: contact_lenses.mtl
data/font/: letters.txt
data/models/: carrs_crackers.mtl
data/models/kinect/carrs_crackers/: model_material.mtl
data/point_clouds/: bert_calib_0001.spc  bert_calib_0002.spc  bert_calib_0003.spc  bert_hand_0001.spc  bert_hand_0002.spc  bert_hand_0003.spc  bert_hand_0004.spc  bert_hand_0005.spc  bert_hand_0006.spc  bert_hand_0007.spc  bert_hand_0008.spc  bert_hand_0009.spc  bert_hand_0010.spc  bert_hand_0011.spc  bert_hand_0012.spc  bert_hand_0013.spc  bert_hand_0014.spc  bert_hand_0015.spc  bert_hand_0016.spc  bert_hand_0017.spc  bert_hand_0018.spc  bert_hand_0019.spc  bert_hand_0020.spc  bert_hand_0021.spc  bert_hand_0022.spc  bert_hand_0023.spc  bert_hand_0024.spc  bert_hand_0025.spc  bert_hand_0026.spc  calib.spc  calib_0002.spc  calib_0003.spc  calib_0004.spc  calib_0005.spc  carrs_crackers_01.spc  carrs_crackers_02.spc  carrs_crackers_03.spc  carrs_crackers_04.spc  cracker_front.spc  cracker_side.spc  (+10 more)
data/point_clouds/calibration_data/: KinectDepth_cameraMatrix.yml  KinectRGB_cameraMatrix.yml  windows_kinect.yaml
data/text_mapper_projects/: bert_hand.yaml  chessboard_1.yaml  crackers.yaml  new_crackers.yaml  small_crackers.yaml
data/text_maps/: acuvue.map  contact_lenses.map  crackers.map
hardware/firmware/CM5/: CMakeLists.txt  INSTALL
hardware/firmware/CM5/doc/: serial_interface.txt
hardware/firmware/CM5/src/: animation.cpp  animation.h  gait.cpp  gait.h  main.cpp  motor.cpp  motor.h  serial.cpp  serial.h  time.cpp  time.h
hardware/firmware/CM700/: CMakeLists.txt  INSTALL
hardware/firmware/CM700/doc/: serial_interface.txt
hardware/firmware/CM700/src/: animation.cpp  animation.h  gait.cpp  main.cpp  motor.cpp  serial.cpp  time.cpp  time.h
hardware/scripts/movement_demo/: movement_demo.py
hardware/scripts/platform_controller/: platform_controller.py
hardware/scripts/platform_controller/gui/: platform_controller.glade
hardware/scripts/robotis_flasher/: flasher.py
include/text_mapping/: box_filter.h  letter.h  point_cloud.h  signed_distance_field.h  text_map.h  utilities.h
include/text_mapping/vtk/: vtk_box_filter_source.h  vtk_point_cloud_source.h  vtk_text_map_source.h
interfaces/python/: TextMapping.i
src/: box_filter.cpp  letter.cpp  point_cloud.cpp  signed_distance_field.cpp  text_map.cpp  utilities.cpp
src/vtk/: vtk_box_filter_source.cpp  vtk_point_cloud_source.cpp  vtk_text_map_source.cpp
