
IF( WIN32 )

	FIND_PACKAGE( Qt4 REQUIRED )
	INCLUDE( ${QT_USE_FILE} )
	ADD_DEFINITIONS( ${QT_DEFINITIONS} )

	SET( WINDOWS_KINECT_GRABBER_SOURCES src/windows_kinect_grabber.cpp src/wkg_main_window.cpp )
	SET( WINDOWS_KINECT_GRABBER_HEADERS src/wkg_main_window.h )
	SET( WINDOWS_KINECT_GRABBER_FORMS gui/wkg_main_window.ui)

	QT4_WRAP_CPP( WINDOWS_KINECT_GRABBER_HEADERS_MOC ${WINDOWS_KINECT_GRABBER_HEADERS} )
	QT4_WRAP_UI( WINDOWS_KINECT_GRABBER_FORMS_HEADERS ${WINDOWS_KINECT_GRABBER_FORMS} )

	INCLUDE_DIRECTORIES( 
		${CMAKE_CURRENT_BINARY_DIR}
		$ENV{KINECTSDK10_DIR}/inc )

	LINK_DIRECTORIES( $ENV{KINECTSDK10_DIR}/lib/x86 )

	ADD_EXECUTABLE( windows_kinect_grabber ${WINDOWS_KINECT_GRABBER_SOURCES} 
		${WINDOWS_KINECT_GRABBER_HEADERS_MOC} 
		${WINDOWS_KINECT_GRABBER_FORMS_HEADERS} )
	TARGET_LINK_LIBRARIES( windows_kinect_grabber ${QT_LIBRARIES} QVTK Kinect10 )

ENDIF()
